--- a/abb_bringup/config/abb_controllers.yaml
+++ b/abb_bringup/config/abb_controllers.yaml
@@ -22,16 +22,31 @@ joint_trajectory_controller:
       - joint_6
     command_interfaces:
       - position
-      - velocity
+#      - velocity
     state_interfaces:
       - position
       - velocity
     state_publish_rate: 100.0
     action_monitor_rate: 20.0
     allow_partial_joints_goal: false
+    open_loop_control: true
     constraints:
-      stopped_velocity_tolerance: 0.0
-      goal_time: 0.0
+      stopped_velocity_tolerance: 0.01
+      goal_time: 0.5
+    gains:
+        joint_1: {p: 10.0, i: 0.0, d: 0.0, i_clamp: 0.0}
+        joint_2: {p: 10.0, i: 0.0, d: 0.0, i_clamp: 0.0}
+        joint_3: {p: 10.0, i: 0.0, d: 0.0, i_clamp: 0.0}
+        joint_4: {p: 10.0, i: 0.0, d: 0.0, i_clamp: 0.0}
+        joint_5: {p: 10.0, i: 0.0, d: 0.0, i_clamp: 0.0}
+        joint_6: {p: 10.0, i: 0.0, d: 0.0, i_clamp: 0.0}
+    velocity_ff:
+        joint_1: 1.0
+        joint_2: 1.0
+        joint_3: 1.0
+        joint_4: 1.0
+        joint_5: 1.0
+        joint_6: 1.0
 
 forward_command_controller_position:
   ros__parameters:
