--- a/robot_specific_config/abb_irb1200_5_90_moveit_config/config/joint_limits.yaml
+++ b/robot_specific_config/abb_irb1200_5_90_moveit_config/config/joint_limits.yaml
@@ -2,33 +2,63 @@
 # Specific joint properties can be changed with the keys [max_position, min_position, max_velocity, max_acceleration]
 # Joint limits can be turned off with [has_velocity_limits, has_acceleration_limits]
 joint_limits:
-  joint_1:
+  rob1_joint_1:
+    has_position_limits: true
+    min_position: -2.96706
+    max_position: 2.96706
     has_velocity_limits: true
     max_velocity: 5.027
-    has_acceleration_limits: false
-    max_acceleration: 0
-  joint_2:
+    has_acceleration_limits: true
+    max_acceleration: 40.0
+    has_jerk_limits: true
+    max_jerk: 150.0
+  rob1_joint_2:
+    has_position_limits: true
+    min_position: -1.74533
+    max_position: 2.26893
     has_velocity_limits: true
     max_velocity: 4.189
-    has_acceleration_limits: false
-    max_acceleration: 0
-  joint_3:
+    has_acceleration_limits: true
+    max_acceleration: 35.0
+    has_jerk_limits: true
+    max_jerk: 150.0
+  rob1_joint_3:
+    has_position_limits: true
+    min_position: -1.22173
+    max_position: 6.283185
     has_velocity_limits: true
     max_velocity: 5.236
-    has_acceleration_limits: false
-    max_acceleration: 0
-  joint_4:
+    has_acceleration_limits: true
+    max_acceleration: 45.0
+    has_jerk_limits: true
+    max_jerk: 150.0
+  rob1_joint_4:
+    has_position_limits: true
+    min_position: -4.71239
+    max_position: 4.71239
     has_velocity_limits: true
     max_velocity: 6.981
-    has_acceleration_limits: false
-    max_acceleration: 0
-  joint_5:
+    has_acceleration_limits: true
+    max_acceleration: 60.0
+    has_jerk_limits: true
+    max_jerk: 150.0
+  rob1_joint_5:
+    has_position_limits: true
+    min_position: -2.26893
+    max_position: 2.26893
     has_velocity_limits: true
     max_velocity: 7.069
-    has_acceleration_limits: false
-    max_acceleration: 0
-  joint_6:
+    has_acceleration_limits: true
+    max_acceleration: 65.0
+    has_jerk_limits: true
+    max_jerk: 150.0
+  rob1_joint_6:
+    has_position_limits: true
+    min_position: -6.98132
+    max_position: 6.98132
     has_velocity_limits: true
     max_velocity: 10.472
-    has_acceleration_limits: false
-    max_acceleration: 0
+    has_acceleration_limits: true
+    max_acceleration: 85.0
+    has_jerk_limits: true
+    max_jerk: 150.0
